2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanner.cs: When a new domain needs to be
	  assigned to a folder, try to reuse the startup domain, if it is
	  set.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs,
	  Mono.Addins.Database/AddinScanFolderInfo.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinScanner.cs: Properly assign the domain
	  when scanning an application for the first time.

2008-07-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/ModuleDescription.cs,
	  Mono.Addins.Database/AddinScanFolderInfo.cs,
	  Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinScanner.cs: Add support for specifying
	  paths to exclude in .addins files and in add-in manifests.
	* Mono.Addins.Database/Util.cs: Make sure window paths are converted to
	  unix paths when running on unix, and vice-versa.

2008-07-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs,
	  Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinScanner.cs: When updating the registry,
	  only scan folders which belong to the current domain.
	* Mono.Addins/ExtensionContext.cs: Fix warning.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionContext.cs: Added missing null check.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/SetupProcess.cs: Make sure no console window is
	  created when launching the scanner.

2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanFolderInfo.cs,
	  Mono.Addins.Database/FileDatabase.cs: Fix problem in windows, where
	  the path of folder info files could exceed the max allowed path
	  length.

2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp, Makefile.am,